# det3d

./: .gitmodules  README.md  hello.py  pip.freeze.txt  pyproject.toml
