[project]
name = "det3d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "torch==2.1.2+cu121",
    "torchvision==0.16.2+cu121",
    "torchaudio==2.1.2+cu121",
    "mmcv==2.1.0",
    "mmengine==0.10.7",
    "mmdet3d",
    "spconv-cu121>=2.3.8",
    "mmdet==3.3.0",
]

[tool.uv]
index-url = "https://pypi.mirrors.ustc.edu.cn/simple/"
extra-index-url = ["https://download.pytorch.org/whl/cu121"]
find-links = [
    "https://download.openmmlab.com/mmcv/dist/cu121/torch2.1/index.html",
]

[tool.uv.sources]
mmdet3d = { path = "mmdetection3d" }
